bug fixes, Level.add_rotation_platform(), Gettables
added ability to easily create rotation platforms.

fixed crouch bug, where standing up would cause player to make a thud and also hit a box. (this was a hackey fix for uncrouching breaking boxes, solved another way).

fixed standing-on-two-objects bug where moving platforms would double their effect on the player if it was on top of two objects.

Added gettable functions for Fruit, Life, Protection, those are now easily added to levels via Level.add_get() just like Level.add_box()

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -13,34 +13,28 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-07T17:56:33.553Z"
+     "start_time": "2020-05-08T20:54:49.373Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 1.9.6\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ['PYGAME_HIDE_SUPPORT_PROMPT'] = \"hide\"\n",
+    "\n",
     "import pygame\n",
     "if False:\n",
+    "    # These must be spcified for pyinstaller for some reason.\n",
     "    import pygame._view\n",
+    "    import numpy.random.common\n",
+    "    import numpy.random.bounded_integers\n",
+    "    import numpy.random.entropy\n",
     "\n",
-    "# These must be spcified for pyinstaller for some reason.\n",
-    "import numpy.random.common\n",
-    "import numpy.random.bounded_integers\n",
-    "import numpy.random.entropy\n",
     "\n",
-    "pygame.init()\n",
+    "\n",
+    "pygame.init();\n",
     "\n",
     "# Custom classes and functions\n",
     "from Constants import display_size\n",
-    "from Level import Level\n",
     "from Keyboard import Game_Keyboard\n",
     "from Play_Level import play_level\n",
     "\n",
@@ -59,7 +53,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-08T19:58:39.100547Z",
+     "start_time": "2020-05-08T19:58:39.096761Z"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -71,23 +70,19 @@
     "\n",
     "Add spring boxes (metal/wood, one class that adds a shape of an arrow, and that's it, rest will be handled outside)\n",
     "\n",
-    "Add life boxes\n",
-    "\n",
-    "Level saving\n",
+    "Level saving/checkpoints\n",
     "\n",
     "Game structure, saving, scores, etc.\n",
     "\n",
     "Bad guys!\n",
     "\n",
-    "add gettable lives and gettable protectors\n",
-    "\n",
-    "fruit and lives fly towards counters at the top when grabbed\n",
-    "\n",
-    "### Squeezing is not currently configured at all (to kill player) (is this needed?)\n",
-    "#### Definitely need to fix: currently, falling non-breakable boxes do not kill player\n",
+    "fruit and lives fly towards counters at the top when grabbed -- protectors fly from box?\n",
     "\n",
     "Known bugs:\n",
-    "getting up from crouch on top of a stack of boxes bounces on top box.\n",
+    "no handling of uncrouch for unbreakable objects (need to keep player crouched)\n",
+    "falling non-breakable boxes do not kill player\n",
+    "need a got-a-life sound\n",
+    "\n",
     "\n",
     "Credits:\n",
     "“Sound effects obtained from zapsplat.com and freesound.org\"\n",
@@ -118,27 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-05T03:47:26.024246Z",
-     "start_time": "2020-05-05T03:47:20.757477Z"
+     "end_time": "2020-05-08T20:14:38.862475Z",
+     "start_time": "2020-05-08T20:14:37.473Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-afc2b4dfdaa2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mkeyboard\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBuild_Keyboard\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mbuild_level\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkeyboard\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgameDisplay\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mclock\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/GitHub/Games/Boxy/Build_Level.py\u001b[0m in \u001b[0;36mbuild_level\u001b[0;34m(num, keyboard, gameDisplay, clock)\u001b[0m\n\u001b[1;32m    110\u001b[0m         \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m         \u001b[0mclock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m35\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 112\u001b[0;31m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    113\u001b[0m     \u001b[0;31m##############################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "\n",
@@ -177,96 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-07T05:47:20.174783Z",
-     "start_time": "2020-05-07T05:47:20.139809Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cx_Freeze'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-c9c609184fbb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mcx_Freeze\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cx_Freeze'"
-     ]
-    }
-   ],
-   "source": [
-    "import cx_Freeze"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-07T15:46:47.315884Z",
      "start_time": "2020-05-07T15:46:47.309943Z"
     }
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-07T15:46:50.057846Z",
-     "start_time": "2020-05-07T15:46:50.037639Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'myfilename.tga'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filename"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-07T15:48:59.241859Z",
-     "start_time": "2020-05-07T15:48:59.235464Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Sam/'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.path.join(os.environ['USER'],'')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": []
   }
