--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -10,10 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-08T20:54:49.373Z"
+     "end_time": "2020-05-08T22:33:24.623779Z",
+     "start_time": "2020-05-08T22:33:08.450477Z"
     }
    },
    "outputs": [],
@@ -52,15 +53,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-08T19:58:39.100547Z",
-     "start_time": "2020-05-08T19:58:39.096761Z"
+     "end_time": "2020-05-08T22:27:43.528815Z",
+     "start_time": "2020-05-08T22:27:43.515953Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.605551275463989"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.linalg.norm([2,3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,11 +98,14 @@
     "no handling of uncrouch for unbreakable objects (need to keep player crouched)\n",
     "falling non-breakable boxes do not kill player\n",
     "need a got-a-life sound\n",
+    "not a bug, but need to change lives for fruit in master list when they are got (avoid infinite life trick)\n",
     "\n",
     "\n",
     "Credits:\n",
     "“Sound effects obtained from zapsplat.com and freesound.org\"\n",
-    "\"Idea inspired by but unrelated to Crash Bandicoot\"\n"
+    "\"Idea inspired by but unrelated to Crash Bandicoot\"\n",
+    "\n",
+    "\n"
    ]
   },
   {
