--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -10,11 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-08T22:33:24.623779Z",
-     "start_time": "2020-05-08T22:33:08.450477Z"
+     "start_time": "2020-05-08T22:49:40.032Z"
     }
    },
    "outputs": [],
@@ -38,6 +37,7 @@
     "from Constants import display_size\n",
     "from Keyboard import Game_Keyboard\n",
     "from Play_Level import play_level\n",
+    "from Status import Status\n",
     "\n",
     "# Initialize game\n",
     "gameDisplay = pygame.display.set_mode(display_size)\n",
@@ -46,37 +46,22 @@
     "# initialize keyboard object to take in control data and feed it to the player object\n",
     "keyboard = Game_Keyboard()\n",
     "\n",
-    "play_level(1,keyboard,gameDisplay,clock)\n",
+    "play_level(1,keyboard,gameDisplay,clock,Status(lives = 15, fruit = 0, boxes = 0)) # arbitrary status start for now\n",
     "\n",
     "pygame.quit()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-08T22:27:43.528815Z",
      "start_time": "2020-05-08T22:27:43.515953Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.605551275463989"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "np.linalg.norm([2,3])"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -86,7 +71,6 @@
     "\n",
     "Add spring boxes (metal/wood, one class that adds a shape of an arrow, and that's it, rest will be handled outside)\n",
     "\n",
-    "Level saving/checkpoints\n",
     "\n",
     "Game structure, saving, scores, etc.\n",
     "\n",
@@ -98,7 +82,6 @@
     "no handling of uncrouch for unbreakable objects (need to keep player crouched)\n",
     "falling non-breakable boxes do not kill player\n",
     "need a got-a-life sound\n",
-    "not a bug, but need to change lives for fruit in master list when they are got (avoid infinite life trick)\n",
     "\n",
     "\n",
     "Credits:\n",
