Added text to level functionality!
Also added  Level.add_baddie() function

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -13,10 +13,20 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-08T22:49:40.032Z"
+     "start_time": "2020-05-15T22:09:04.138Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error with line 33: self.add_rotation_platform([8:0:radius=2:platform_width=1:T=600:color=(50:50:50))\n",
+      "Error with line 37: self.master_baddie_list.append(Baddie.Owl([[box_size*2:box_size*4:[box_size*10:box_size*4])\n",
+      "Error with line 38: self.master_baddie_list.append(Baddie.Owl([[box_size*20:box_size*4:[box_size*12:box_size*4])\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.environ['PYGAME_HIDE_SUPPORT_PROMPT'] = \"hide\"\n",
@@ -46,7 +56,7 @@
     "# initialize keyboard object to take in control data and feed it to the player object\n",
     "keyboard = Game_Keyboard()\n",
     "\n",
-    "play_level(1,keyboard,gameDisplay,clock,Status(lives = 15, fruit = 0, boxes = 0)) # arbitrary status start for now\n",
+    "play_level(2,keyboard,gameDisplay,clock,Status(lives = 15, fruit = 0, boxes = 0)) # arbitrary status start for now\n",
     "\n",
     "pygame.quit()\n"
    ]
