added requirements, text instruction, quit
also moved scenery creation to text file.

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -13,7 +13,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-15T22:09:04.138Z"
+     "start_time": "2020-05-18T03:07:57.695Z"
     }
    },
    "outputs": [
@@ -21,9 +21,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error with line 33: self.add_rotation_platform([8:0:radius=2:platform_width=1:T=600:color=(50:50:50))\n",
-      "Error with line 37: self.master_baddie_list.append(Baddie.Owl([[box_size*2:box_size*4:[box_size*10:box_size*4])\n",
-      "Error with line 38: self.master_baddie_list.append(Baddie.Owl([[box_size*20:box_size*4:[box_size*12:box_size*4])\n"
+      "Error with line 55: self.add_rotation_platform([8:0:radius=2:platform_width=1:T=600:color=(50:50:50))\n",
+      "Error with line 57: self.master_baddie_list.append(Baddie.Owl([[box_size*2:box_size*4:[box_size*10:box_size*4])\n",
+      "Error with line 58: self.master_baddie_list.append(Baddie.Owl([[box_size*20:box_size*4:[box_size*12:box_size*4])\n",
+      "ey\n",
+      "Error with line 55: self.add_rotation_platform([8:0:radius=2:platform_width=1:T=600:color=(50:50:50))\n",
+      "Error with line 57: self.master_baddie_list.append(Baddie.Owl([[box_size*2:box_size*4:[box_size*10:box_size*4])\n",
+      "Error with line 58: self.master_baddie_list.append(Baddie.Owl([[box_size*20:box_size*4:[box_size*12:box_size*4])\n",
+      "ey\n",
+      "Error with line 55: self.add_rotation_platform([8:0:radius=2:platform_width=1:T=600:color=(50:50:50))\n",
+      "Error with line 57: self.master_baddie_list.append(Baddie.Owl([[box_size*2:box_size*4:[box_size*10:box_size*4])\n",
+      "Error with line 58: self.master_baddie_list.append(Baddie.Owl([[box_size*20:box_size*4:[box_size*12:box_size*4])\n"
      ]
     }
    ],
@@ -56,7 +64,8 @@
     "# initialize keyboard object to take in control data and feed it to the player object\n",
     "keyboard = Game_Keyboard()\n",
     "\n",
-    "play_level(2,keyboard,gameDisplay,clock,Status(lives = 15, fruit = 0, boxes = 0)) # arbitrary status start for now\n",
+    "while True:\n",
+    "    play_level(2,keyboard,gameDisplay,clock,Status(lives = 15, fruit = 0, boxes = 0)) # arbitrary status start for now\n",
     "\n",
     "pygame.quit()\n"
    ]
@@ -88,8 +97,10 @@
     "\n",
     "fruit and lives fly towards counters at the top when grabbed -- protectors fly from box?\n",
     "\n",
+    "add hit box around top three sides of player when invincible (but not when just hit...)\n",
+    "\n",
     "Known bugs:\n",
-    "no handling of uncrouch for unbreakable objects (need to keep player crouched)\n",
+    "no handling of un-crouch for unbreakable objects (need to keep player crouched)\n",
     "falling non-breakable boxes do not kill player\n",
     "need a got-a-life sound\n",
     "\n",
