Added baddie, rotating platform to text maker
added new level3.txt

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -13,28 +13,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-18T03:07:57.695Z"
+     "start_time": "2020-05-18T05:00:51.004Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error with line 55: self.add_rotation_platform([8:0:radius=2:platform_width=1:T=600:color=(50:50:50))\n",
-      "Error with line 57: self.master_baddie_list.append(Baddie.Owl([[box_size*2:box_size*4:[box_size*10:box_size*4])\n",
-      "Error with line 58: self.master_baddie_list.append(Baddie.Owl([[box_size*20:box_size*4:[box_size*12:box_size*4])\n",
-      "ey\n",
-      "Error with line 55: self.add_rotation_platform([8:0:radius=2:platform_width=1:T=600:color=(50:50:50))\n",
-      "Error with line 57: self.master_baddie_list.append(Baddie.Owl([[box_size*2:box_size*4:[box_size*10:box_size*4])\n",
-      "Error with line 58: self.master_baddie_list.append(Baddie.Owl([[box_size*20:box_size*4:[box_size*12:box_size*4])\n",
-      "ey\n",
-      "Error with line 55: self.add_rotation_platform([8:0:radius=2:platform_width=1:T=600:color=(50:50:50))\n",
-      "Error with line 57: self.master_baddie_list.append(Baddie.Owl([[box_size*2:box_size*4:[box_size*10:box_size*4])\n",
-      "Error with line 58: self.master_baddie_list.append(Baddie.Owl([[box_size*20:box_size*4:[box_size*12:box_size*4])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.environ['PYGAME_HIDE_SUPPORT_PROMPT'] = \"hide\"\n",
@@ -65,22 +47,38 @@
     "keyboard = Game_Keyboard()\n",
     "\n",
     "while True:\n",
-    "    play_level(2,keyboard,gameDisplay,clock,Status(lives = 15, fruit = 0, boxes = 0)) # arbitrary status start for now\n",
+    "    play_level(3,keyboard,gameDisplay,clock,Status(lives = 15, fruit = 0, boxes = 0)) # arbitrary status start for now\n",
     "\n",
     "pygame.quit()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-08T22:27:43.528815Z",
-     "start_time": "2020-05-08T22:27:43.515953Z"
+     "end_time": "2020-05-18T04:35:45.415347Z",
+     "start_time": "2020-05-18T04:35:45.388000Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'Level' from '/Users/Sam/Documents/GitHub/Games/Boxy/Level.py'>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import importlib\n",
+    "import Play_Level, Level\n",
+    "importlib.reload(Play_Level)\n",
+    "importlib.reload(Level)\n"
+   ]
   },
   {
    "cell_type": "markdown",
